# wxwidget

./: CMakeLists.txt  Color.cpp  Color.h  log  wxgl.cpp  wxgl.h
CMakeModules/: FindLOG4CPP.cmake
graphics/: DrawGLUtils.cpp  DrawGLUtils.h  LightCube.fs  LightCube.vs  SimpleFragmentShader.fs  SimpleVertexShader.vs  mesh.h  ogl.cpp  ogl.h  ogl_error.h  shader.cpp  shader.h  xlGLCanvas.cpp  xlGLCanvas.h  xlGraphicsContext.h  xlOGL3GraphicsContext.cpp  xlOGL3GraphicsContext.h
